--- a/projects/angular-keyboard/src/lib/fake-input/fake-char/fake-char.component.scss
+++ b/projects/angular-keyboard/src/lib/fake-input/fake-char/fake-char.component.scss
@@ -1,19 +1,25 @@
-.cursor-left {
-  margin-left: -2px;
-  border-left: 2px solid black;
+$cursor-width: 2px;
 
+.cursor-left, .cursor-right {
   animation-name: blink-animation2;
   animation-duration: 1s;
   animation-iteration-count: infinite;
 }
 
-
-@keyframes blink-animation2 {
-  0%   {border-left-color: rgba(0,0,0,1);}
-  50%  {border-left-color: rgba(0,0,0,0);}
-  100% {border-left-color: rgba(0,0,0,1);}
+.cursor-left {
+  margin-left: -$cursor-width;
+  border-left: $cursor-width solid black;
 }
 
 .cursor-right {
-
+  margin-right: -$cursor-width;
+  border-right: $cursor-width solid black;
 }
+
+
+@keyframes blink-animation2 {
+  0%   {border-color: rgba(0,0,0,1);}
+  50%  {border-color: rgba(0,0,0,0);}
+  100% {border-color: rgba(0,0,0,1);}
+}
+
