--- a/projects/angular-keyboard/src/lib/fake-input/fake-input.component.scss
+++ b/projects/angular-keyboard/src/lib/fake-input/fake-input.component.scss
@@ -11,4 +11,6 @@
   white-space: pre-wrap; // to preserve multiple sequential whitespaces
   text-align: left;
   cursor: text;
+
+  user-select: none;
 }
