--- a/projects/angular-keyboard/src/lib/fake-input/fake-input.component.html
+++ b/projects/angular-keyboard/src/lib/fake-input/fake-input.component.html
@@ -1,4 +1,5 @@
 <div class="wrapper"
+     [ngStyle]="{'border-width': styles.borderWidth + 'px', 'padding': styles.padding + 'px'}"
      #wrapper
      (click)="onClickInputField($event, wrapper)">
   <ng-container *ngFor="let char of chars; let idx = index">
