set border and padding in css

--- a/projects/angular-keyboard/src/lib/fake-input/fake-input.component.scss
+++ b/projects/angular-keyboard/src/lib/fake-input/fake-input.component.scss
@@ -1,12 +1,9 @@
 .wrapper {
 
-  // padding added via JS
-  // border-width added via JS
+  border: 1px solid black;
+  padding: 5px;
 
   font-size: 20px;
-
-  border-style: solid;
-  border-color: black;
 
   margin-bottom: 5px;
   display: block;
