--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,14 @@
   <div style="width: 500px; margin: 0 auto;">
     <app-fake-input></app-fake-input>
   </div>
+  
+  <p>
+    Here's a second input field.
+  </p>
+  <div style="width: 400px; margin: 0 auto;">
+    <app-fake-input></app-fake-input>
+  </div>
+  
   <p>
     You pressed <code>{{(input$ | async) || 'nothing yet'}}</code>.
   </p>
