--- a/projects/angular-keyboard/src/lib/keyboard-container/keyboard-container.component.html
+++ b/projects/angular-keyboard/src/lib/keyboard-container/keyboard-container.component.html
@@ -3,4 +3,5 @@
   <ng-content></ng-content>
 </div>
 <tb-keyboard *ngIf="(inputFocused$ | async) != null"
-             (click)="onClickKeyboard($event)"></tb-keyboard>
+             (click)="onClickKeyboard($event)">
+</tb-keyboard>
