--- a/projects/angular-keyboard/src/lib/fake-input/fake-char/fake-char.component.html
+++ b/projects/angular-keyboard/src/lib/fake-input/fake-char/fake-char.component.html
@@ -1,4 +1,4 @@
 <span (click)="onClick($event)"
-      [ngClass]="{'cursor-left': isCursorLeft, 'cursor-right': isCursorRight}">
-  <ng-content></ng-content>
-</span>
+      [ngClass]="ngClass"><!--
+  -->{{char.char}}<!--
+--></span>
