--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,10 +8,10 @@
   </div>
   
   <p>
-    Here's a second input field.
+    Here's a second input field with suggestion mode turned on.
   </p>
   <div style="width: 400px; margin: 0 auto;">
-    <app-fake-input></app-fake-input>
+    <app-fake-input [suggestionMode]="true"></app-fake-input>
   </div>
   
   <p>
