custom styling options

--- a/projects/angular-keyboard/src/lib/fake-input/fake-input.component.html
+++ b/projects/angular-keyboard/src/lib/fake-input/fake-input.component.html
@@ -1,4 +1,5 @@
 <div class="wrapper"
+     [ngStyle]="config.inputFieldStyling"
      #wrapper
      (click)="onClickInputField($event, wrapper)">
   <ng-container *ngFor="let char of chars; let idx = index">
