--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -4,14 +4,17 @@
     Click into the input field to open the keyboard.
   </p>
   <div style="width: 500px; margin: 0 auto;">
-    <app-fake-input></app-fake-input>
+    <app-fake-input (text)="onTextChange($event)">
+    </app-fake-input>
   </div>
   
   <p>
     Here's a second input field with suggestion mode turned on.
   </p>
   <div style="width: 400px; margin: 0 auto;">
-    <app-fake-input [suggestionMode]="true"></app-fake-input>
+    <app-fake-input [suggestionMode]="true"
+                    (text)="onTextChange($event)">
+    </app-fake-input>
   </div>
   
   <p>
