styling options added and removed chars

--- a/projects/angular-keyboard/src/lib/fake-input/fake-input.component.html
+++ b/projects/angular-keyboard/src/lib/fake-input/fake-input.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper"
-     [ngStyle]="config.inputFieldStyling"
+     [ngStyle]="config.styles?.inputField"
      #wrapper
      (click)="onClickInputField($event, wrapper)">
   <ng-container *ngFor="let char of chars; let idx = index">
