scrolling into view

--- a/projects/angular-keyboard/src/lib/keyboard-container/keyboard-container.component.html
+++ b/projects/angular-keyboard/src/lib/keyboard-container/keyboard-container.component.html
@@ -2,6 +2,7 @@
      (click)="onClickOnPage($event)">
   <ng-content></ng-content>
 </div>
-<tb-keyboard *ngIf="(inputFocused$ | async) != null"
+<tb-keyboard *ngIf="inputFocused != null"
+             (viewInitialized)="onKeyboardViewInit()"
              (click)="onClickKeyboard($event)">
 </tb-keyboard>
