remove unused code

--- a/projects/angular-keyboard/src/lib/keyboard-container/keyboard-container.component.html
+++ b/projects/angular-keyboard/src/lib/keyboard-container/keyboard-container.component.html
@@ -3,6 +3,5 @@
   <ng-content></ng-content>
 </div>
 <tb-keyboard *ngIf="inputFocused != null"
-             (viewInitialized)="onKeyboardViewInit()"
-             (click)="onClickKeyboard($event)">
+             (viewInitialized)="onKeyboardViewInit()">
 </tb-keyboard>
