try a little different layouing

--- a/projects/angular-keyboard/src/lib/fake-input/fake-input.component.html
+++ b/projects/angular-keyboard/src/lib/fake-input/fake-input.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper"
      [ngStyle]="config.styles?.inputField"
      #wrapper
-     (click)="onClickInputField($event, wrapper)">
+     (click)="onClickInputField($event)">
   <ng-container *ngFor="let char of chars; let idx = index">
     <app-fake-char #fakechar
                    (clickLeft)="onClickCharLeft(char, idx)"
