--- a/projects/angular-keyboard/src/lib/keyboard-container/keyboard-container.component.scss
+++ b/projects/angular-keyboard/src/lib/keyboard-container/keyboard-container.component.scss
@@ -6,13 +6,17 @@ $keyboard-height: 180px;
   display: block;
 }
 
-.page-content {
+.page-content-wrapper {
   overflow: auto;
   position: absolute;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
+  .page-content {
+    position: relative;
+    z-index: 0;
+  }
   &.keyboard-open {
     bottom: $keyboard-height;
   }
