--- a/projects/angular-keyboard/src/lib/buttons/spacebar-button/spacebar-button.component.html
+++ b/projects/angular-keyboard/src/lib/buttons/spacebar-button/spacebar-button.component.html
@@ -1,3 +1,3 @@
-<button class="keyboard-button-base spacebar-button">
+<button class="keyboard-button-base spacebar-button" (click)="onClick()">
   Leerzeichen
 </button>
