--- a/projects/angular-keyboard/src/lib/keyboard/keyboard.component.html
+++ b/projects/angular-keyboard/src/lib/keyboard/keyboard.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <div *ngFor="let row of selectedTab"
        class="keyboard-row">
-    <div *ngFor="let btn of row">
+    <div *ngFor="let btn of row" class="keyboard-btn">
       <ng-container [ngSwitch]="btn">
         <ng-container *ngSwitchCase="keyboardCommandButton.SHIFT">
           <tb-icon-button [activated]="shiftPressed"
@@ -30,13 +30,15 @@
           </tb-icon-button>
         </ng-container>
         <ng-container *ngSwitchCase="keyboardCommandButton.SPACEBAR">
-          <tb-spacebar-button (buttonClick)="onKeyboardButtonClick($event)">
-          </tb-spacebar-button>
+          <button class="keyboard-button-base spacebar-button" (click)="onKeyboardButtonClick(' ')">
+            Leerzeichen
+          </button>
         </ng-container>
         <ng-container *ngSwitchDefault>
-          <tb-single-char-button [btn]="btn"
-                                 (buttonClick)="onKeyboardButtonClick($event)">
-          </tb-single-char-button>
+          <button class="keyboard-button-base single-char-button"
+                  (click)="onKeyboardButtonClick(btn)">
+            {{btn}}
+          </button>
         </ng-container>
       </ng-container>
     </div>
