--- a/projects/angular-keyboard/src/lib/keyboard/keyboard.component.scss
+++ b/projects/angular-keyboard/src/lib/keyboard/keyboard.component.scss
@@ -1,4 +1,5 @@
 @import '../keyboard.variables';
+@import '../buttons/keyboard-button.vars';
 
 :host {
   display: flex;
@@ -6,6 +7,21 @@
   justify-content: center;
   .keyboard-row {
     display: flex;
+    width: $keyboard-content-width;
+    .keyboard-btn {
+      flex-grow: 1;
+    }
   }
   touch-action: manipulation; // no zoom on double tap on iOS
+}
+
+.single-char-button {
+  width: $button-width;
+  font-size: 20px;
+  background: $button-background-regular;
+}
+
+.spacebar-button {
+  width: multiCellButtonWidth(7);
+  background: $button-background-regular;
 }
