--- a/projects/angular-keyboard/src/lib/keyboard/keyboard.component.scss
+++ b/projects/angular-keyboard/src/lib/keyboard/keyboard.component.scss
@@ -36,7 +36,7 @@ $keyboard-max-width: 500px;
 }
 
 .spacebar-button {
-  width: multiCellButtonWidth(7);
+  flex-basis: multiCellButtonWidth(7);
   background: $button-background-regular;
 }
 
