change some namings

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,4 +1,4 @@
 <app-nav></app-nav>
 <p>
-  Welcome to the taskbase-angular-libraries! Click the nav to view a demo.
+  Welcome to the angular-libraries-demo! Click the nav to view a demo.
 </p>
