--- a/src/app/keyboard-demo/keyboard-demo/keyboard-demo.component.html
+++ b/src/app/keyboard-demo/keyboard-demo/keyboard-demo.component.html
@@ -6,17 +6,17 @@
     Click into the input field to open the keyboard.
   </p>
   <div style="width: 500px; max-width: 100%; margin: 0 auto;">
-    <app-fake-input (text)="onTextChange($event)">
-    </app-fake-input>
+    <tb-input (text)="onTextChange($event)">
+    </tb-input>
   </div>
   
   <p>
     Here's a second input field with suggestion mode turned on.
   </p>
   <div style="width: 400px; max-width: 100%; margin: 0 auto;">
-    <app-fake-input [suggestionMode]="true"
+    <tb-input [suggestionMode]="true"
                     (text)="onTextChange($event)">
-    </app-fake-input>
+    </tb-input>
   </div>
   
   <p>
