--- a/projects/angular-keyboard/src/lib/keyboard-container/keyboard-container.component.html
+++ b/projects/angular-keyboard/src/lib/keyboard-container/keyboard-container.component.html
@@ -7,6 +7,5 @@
 </div>
 <tb-keyboard class="keyboard"
              id="keyboard"
-             *ngIf="inputFocused != null"
-             (viewInitialized)="onKeyboardViewInit()">
+             *ngIf="inputFocused != null">
 </tb-keyboard>
