--- a/src/app/keyboard-demo/keyboard-demo/keyboard-demo.component.html
+++ b/src/app/keyboard-demo/keyboard-demo/keyboard-demo.component.html
@@ -6,7 +6,8 @@
     Click into the input field to open the keyboard.
   </p>
   <div style="width: 500px; max-width: 100%; margin: 0 auto;">
-    <tb-input (text)="onTextChange($event)">
+    <tb-input (text)="onTextChange($event)"
+              [initialText]="''">
     </tb-input>
   </div>
   
@@ -15,7 +16,8 @@
   </p>
   <div style="width: 400px; max-width: 100%; margin: 0 auto;">
     <tb-input [suggestionMode]="true"
-                    (text)="onTextChange($event)">
+              [initialText]="'Das ist ein Text mit Felern. Korigiere die Fehler!'"
+              (text)="onTextChange($event)">
     </tb-input>
   </div>
   
