add option to hide keyboard

--- a/projects/angular-keyboard/src/lib/keyboard-container/keyboard-container.component.html
+++ b/projects/angular-keyboard/src/lib/keyboard-container/keyboard-container.component.html
@@ -7,5 +7,5 @@
 </div>
 <tb-keyboard class="keyboard"
              id="keyboard"
-             *ngIf="inputFocused != null">
+             *ngIf="!keyboardHidden && inputFocused != null">
 </tb-keyboard>
