--- a/src/app/nav/nav/nav.component.html
+++ b/src/app/nav/nav/nav.component.html
@@ -1,4 +1,5 @@
 <nav class="navbar">
   <button routerLink="">Home</button>
   <button routerLink="/keyboard">Keyboard</button>
+  <button routerLink="/keyboard/hidden">Keyboard Hidden</button>
 </nav>
