--- a/projects/angular-keyboard/src/lib/fake-input/fake-char/fake-char.component.html
+++ b/projects/angular-keyboard/src/lib/fake-input/fake-char/fake-char.component.html
@@ -1,4 +1,5 @@
-<span (click)="onClick($event)"
+<span class="char-spacing"
+      (click)="onClick($event)"
       [ngStyle]="ngStyle"
       [ngClass]="ngClass"><!--
   -->{{char.char}}<!--
